{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 113,
  "lineage": "d8b8f24e-efc4-7393-3bea-079a6558bf04",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-alb/7b6c1b76d7e3bc67",
            "arn_suffix": "app/konecta-ass1-alb/7b6c1b76d7e3bc67",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "konecta-ass1-alb-1030551030.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-alb/7b6c1b76d7e3bc67",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "konecta-ass1-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a7674c2c6599944"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041d53b164c15351e"
              },
              {
                "subnet_id": "subnet-0eb2b19ce0bc4b3de"
              }
            ],
            "subnets": [
              "subnet-041d53b164c15351e",
              "subnet-0eb2b19ce0bc4b3de"
            ],
            "vpc_id": "vpc-023fd3222fa4e401b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:listener/app/konecta-ass1-alb/7b6c1b76d7e3bc67/1f5693f53c4f4799",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-tg/7b02af426691ead7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:listener/app/konecta-ass1-alb/7b6c1b76d7e3bc67/1f5693f53c4f4799",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:loadbalancer/app/konecta-ass1-alb/7b6c1b76d7e3bc67",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.frontend",
            "module.ecs.aws_lb_target_group.frontend_tg",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-tg/7b02af426691ead7",
            "arn_suffix": "targetgroup/konecta-ass1-tg/7b02af426691ead7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:482352877046:targetgroup/konecta-ass1-tg/7b02af426691ead7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "konecta-ass1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-02a7674c2c6599944",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a7674c2c6599944",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konecta-ass1-dev-alb-sg-20251123223610808000000002",
            "name_prefix": "konecta-ass1-dev-alb-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-alb-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-0b244560da38e8a0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b244560da38e8a0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef4fe76a57d5c9c6"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "konecta-ass1-dev-backend-ecs-sg-20251123223620032500000005",
            "name_prefix": "konecta-ass1-dev-backend-ecs-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-backend-ecs-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-backend-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.frontend_ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-0ef4fe76a57d5c9c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef4fe76a57d5c9c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a7674c2c6599944"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konecta-ass1-dev-frontend-ecs-sg-20251123223615468500000004",
            "name_prefix": "konecta-ass1-dev-frontend-ecs-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-frontend-ecs-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-frontend-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:security-group/sg-078613966c7a23b62",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-078613966c7a23b62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b244560da38e8a0d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "konecta-ass1-dev-rds-sg-20251123223624254200000008",
            "name_prefix": "konecta-ass1-dev-rds-sg-",
            "owner_id": "482352877046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "konecta-ass1-dev-rds-sg"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.backend_ecs",
            "module.security_groups.aws_security_group.frontend_ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf2a0b42bb58d13e",
            "arn": "arn:aws:ec2:us-east-1:482352877046:elastic-ip/eipalloc-0bf2a0b42bb58d13e",
            "domain": "vpc",
            "id": "eipalloc-0bf2a0b42bb58d13e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-72-147.compute-1.amazonaws.com",
            "public_ip": "54.86.72.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konecta-ass1-dev-eip-nat-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-eip-nat-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e35ab241127131d9",
            "arn": "arn:aws:ec2:us-east-1:482352877046:elastic-ip/eipalloc-0e35ab241127131d9",
            "domain": "vpc",
            "id": "eipalloc-0e35ab241127131d9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-92-158-251.compute-1.amazonaws.com",
            "public_ip": "3.92.158.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "konecta-ass1-dev-eip-nat-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-eip-nat-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:internet-gateway/igw-05adf69c88095fdf5",
            "id": "igw-05adf69c88095fdf5",
            "owner_id": "482352877046",
            "tags": {
              "Name": "konecta-ass1-dev-igw"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-igw"
            },
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf2a0b42bb58d13e",
            "association_id": "eipassoc-093ca4c57753c8594",
            "connectivity_type": "public",
            "id": "nat-055960ef6ab3de189",
            "network_interface_id": "eni-0e2fb04c1f86f53f0",
            "private_ip": "10.0.1.117",
            "public_ip": "54.86.72.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb2b19ce0bc4b3de",
            "tags": {
              "Name": "konecta-ass1-dev-nat-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e35ab241127131d9",
            "association_id": "eipassoc-0e3cfc21203c8823a",
            "connectivity_type": "public",
            "id": "nat-01a212cb0e81c785c",
            "network_interface_id": "eni-0a2b4533fc1e8a90f",
            "private_ip": "10.0.2.130",
            "public_ip": "3.92.158.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041d53b164c15351e",
            "tags": {
              "Name": "konecta-ass1-dev-nat-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-0b725343ac45ed06e",
            "id": "rtb-0b725343ac45ed06e",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055960ef6ab3de189",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-private-rt-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-0cc7424db8f99d77b",
            "id": "rtb-0cc7424db8f99d77b",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01a212cb0e81c785c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-private-rt-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:route-table/rtb-03f2fca71b9b8c8ba",
            "id": "rtb-03f2fca71b9b8c8ba",
            "owner_id": "482352877046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05adf69c88095fdf5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "konecta-ass1-dev-public-rt"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a9e2719bd5d9bb8",
            "route_table_id": "rtb-0b725343ac45ed06e",
            "subnet_id": "subnet-0672bef588fb9be2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02621d743b85f52a2",
            "route_table_id": "rtb-0cc7424db8f99d77b",
            "subnet_id": "subnet-0c2f58c8ae6fc7314"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5bf855661c9938",
            "route_table_id": "rtb-03f2fca71b9b8c8ba",
            "subnet_id": "subnet-0eb2b19ce0bc4b3de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a12207e07eefe6",
            "route_table_id": "rtb-03f2fca71b9b8c8ba",
            "subnet_id": "subnet-041d53b164c15351e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0672bef588fb9be2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0672bef588fb9be2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-private-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-1"
            },
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0c2f58c8ae6fc7314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2f58c8ae6fc7314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-private-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-private-2"
            },
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-0eb2b19ce0bc4b3de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2b19ce0bc4b3de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-public-1"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-1"
            },
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:subnet/subnet-041d53b164c15351e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041d53b164c15351e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482352877046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "konecta-ass1-dev-public-2"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-public-2"
            },
            "vpc_id": "vpc-023fd3222fa4e401b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482352877046:vpc/vpc-023fd3222fa4e401b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a986dc9c7a6cebd",
            "default_route_table_id": "rtb-0e20b531af1b9d9fe",
            "default_security_group_id": "sg-067cfe4bad7d60ef2",
            "dhcp_options_id": "dopt-0c28fec763ea0a635",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023fd3222fa4e401b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e20b531af1b9d9fe",
            "owner_id": "482352877046",
            "tags": {
              "Name": "konecta-ass1-dev-vpc"
            },
            "tags_all": {
              "Name": "konecta-ass1-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}